# edu-geni-python-cert

./: .env.example  .gitignore  README.md  hello-gemini.py  hello-openai.py  pyproject.toml  terminologies.md
agents/: audio-audio-weather-agent.py  cli-based-coding-agnet.py  weather-agent-pydantic.py  weather-agent.py  web_search.py
langchain/: chat-google-gemini.py  chat-openai.py
langchain/agents/: chat.py  research-and-write-agent-using-create-agent-react.py  weather-agent.py
langgraph/: chat.py
langgraph/edges/: conditional-edge.py  parallel-edge-medium.py  parallel-edge-simple.py  serial-edge.py
langgraph/interrupt/: langgraph-interrupt.py
langgraph/memory/: langgraph-memory.py
langgraph/project/: calcualtor.py  email-workflow.py
my-mcp-server/: pyproject.toml  server.py
my-mcp-server/practice-task/: practice.md
openai-method/: function-calling.py  open-sdk-tool-calling.py
prompts/: auto-cot-prompting.py  cot-prompting.py  few-shot-prompting.py  one-shot-prompting.py  structured-output-prompting.py  zero-shot-prompting.py
pydantic/: 01_basics.py  02_default_value.py  03_typing_with_pydantic.py  04_field_validation.py
python/: 25_typing.py  26_challenges.py
rag/: hypothetical-query-retreive.py  parallel-query-retreive.py  pdf-loader.py  reciprocal-rank-fusion-retreive.py  retrieve.py  step-back-retreive.py
responses-api/: hello-openai.py
streaming/: stream-openai.py
