[project]
name = "genai-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ddgs>=9.14.4",
    "dotenv>=0.9.9",
    "ipython>=9.15.0",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.6",
    "langchain-openai>=1.3.2",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langchain[agents,openai]>=1.3.11",
    "langgraph>=1.2.6",
    "mcp[cli]>=1.27.2",
    "openai>=2.41.0",
    "openai-agents>=0.17.5",
    "playsound3>=3.3.1",
    "pydantic>=2.13.4",
    "pypdf>=6.13.3",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "tavily-python>=0.7.26",
]

[tool.uv.workspace]
members = [
    "my-mcp-server",
]
